--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ button:active {
   width: 800px;
   }
 
-input {
+div#indiv input {
   transition: background-color 0.7s;
   outline: none;
   margin: 4px;
@@ -69,9 +69,23 @@ input {
 
 }
 
-input:focus {
+div#indiv input:focus {
   border-bottom: 2px solid #a33535;
   background-color: #fff;
+}
+
+div#outdiv input {
+  position: relative;
+  top: -520px;
+  left: 4px;
+  border-radius: 4px;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.07);
+  transition: background-color 0.5s ease;
+}
+
+div#outdiv input:focus {
+  background-color: #F0EAD6;
 }
 
 #input {
@@ -85,19 +99,24 @@ input:focus {
 #indiv {
   transition: opacity 0.8s ease-in;
 }
-#outdiv{
+#outdiv {
   position: relative;
   bottom: 410px;
   transition: opacity 0.8s ease-in;
 }
 
-.savegame .output {
+.output {
   transition: opacity 0.8s ease-in;
   transition: width 0.8s ease-in;
   transition: height 0.8s ease-in;
+  position: relative;
+  left: -175px;
 }
 
-
+input[disabled] {
+  opacity: 0.35;
+  cursor: not-allowed;
+}
 
 #hail {
   transition: opacity 2s;
