--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ button:active {
   width: 800px;
   }
 
-div#indiv input {
+input {
   transition: background-color 0.7s;
   outline: none;
   margin: 4px;
@@ -69,23 +69,9 @@ div#indiv input {
 
 }
 
-div#indiv input:focus {
+input:focus {
   border-bottom: 2px solid #a33535;
   background-color: #fff;
-}
-
-div#outdiv input {
-  position: relative;
-  top: -520px;
-  left: 4px;
-  border-radius: 4px;
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.07);
-  transition: background-color 0.5s ease;
-}
-
-div#outdiv input:focus {
-  background-color: #F0EAD6;
 }
 
 #input {
@@ -99,23 +85,25 @@ div#outdiv input:focus {
 #indiv {
   transition: opacity 0.8s ease-in;
 }
-#outdiv {
+#outdiv{
   position: relative;
   bottom: 410px;
   transition: opacity 0.8s ease-in;
 }
 
-.output {
+.savegame .output {
   transition: opacity 0.8s ease-in;
   transition: width 0.8s ease-in;
   transition: height 0.8s ease-in;
 }
 
-input[disabled] {
-  opacity: 0.35;
-  cursor: not-allowed;
-}
+
 
 #hail {
   transition: opacity 2s;
+}
+
+#credit {
+  font-family: "Courier New", Courier, monospace;
+  font-style: italic;
 }
